--- a/package.json
+++ b/package.json
@@ -21,12 +21,14 @@
   },
   "dependencies": {
     "@aws-sdk/client-dynamodb": "^3.528.0",
-    "@aws-sdk/client-s3": "^3.525.0",
+    "@aws-sdk/client-s3": "^3.529.1",
     "@nestjs/common": "^10.0.0",
     "@nestjs/config": "^3.2.0",
     "@nestjs/core": "^10.0.0",
     "@nestjs/mapped-types": "*",
     "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/swagger": "^7.3.0",
+    "@types/multer": "^1.4.11",
     "aws-sdk": "^2.1572.0",
     "class-validator": "^0.14.1",
     "nest-aws-sdk": "^3.0.1",
