--- a/package.json
+++ b/package.json
@@ -25,13 +25,19 @@
     "@nestjs/common": "^10.0.0",
     "@nestjs/config": "^3.2.0",
     "@nestjs/core": "^10.0.0",
+    "@nestjs/jwt": "^10.2.0",
     "@nestjs/mapped-types": "*",
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/swagger": "^7.3.0",
     "@types/multer": "^1.4.11",
     "aws-sdk": "^2.1572.0",
+    "bcrypt": "^5.1.1",
     "class-validator": "^0.14.1",
+    "jsonwebtoken": "^9.0.2",
     "nest-aws-sdk": "^3.0.1",
+    "passport": "^0.7.0",
+    "passport-jwt": "^4.0.1",
+    "passport-local": "^1.0.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
     "uuid": "^9.0.1"
